--- a/tickets.css
+++ b/tickets.css
@@ -46,6 +46,7 @@ input, button, textarea, select {
 /*Navbar*/
 .navbar{
     background-color: #1C3846;
+    margin-bottom: 2%;
 }
 .navbar-brand {
     color: #fff9ed;
@@ -78,33 +79,22 @@ input, button, textarea, select {
 /*---------------------------------------------------------------------------*/
 /*Main*/
 
-section {
-    margin-bottom: 5%;
+.galeria-descuentos {
+    margin-bottom: 3%;
+    text-align: center;
 }
 
-hr {
-    border: 5px solid #1C3846; 
-    border-radius: 300px/10px;
-    height: 0; 
-    margin: 20px 0;
-    opacity: 1; 
+.card {
+    transition: transform 0.3s ease-in-out; /* Efecto de transición */
+    cursor: pointer; /* Cambia el cursor a puntero */
 }
 
-.galeria-artistas {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+.card:hover {
+    transform: scale(1.05); /* Escala la tarjeta al 105% */
+    transition: transform 0.3s ease-in-out; /* Transición más suave al entrar */
 }
 
-.galeria-artistas h1 {
-    font-size: 3rem;
-    font-weight: bold;
-    color: #000000;
-    margin-bottom: 2rem;
-}
-
-.card-artistas {
+.card-descuentos {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Tres columnas de igual ancho */
     gap: 20px; /* Espacio entre las tarjetas */
@@ -112,35 +102,27 @@ hr {
     width: 80%;
 }
 
-.card {
-    width: 18rem;
-    background-color: #1a1a1a;
-    color: white;
-    border: none;
-    transition: transform 0.3s ease-in-out; /* Efecto de transición */
-    cursor: pointer; /* Cambia el cursor a puntero */
+
+.form-label {
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #e9ecef;
+    border: 1px solid #575757;
+    border-radius: 0.25rem;
+    text-align: center;
 }
 
-.card img {
-    border-radius: 10px 10px 0 0;
-    object-fit: cover;
+.file {
+    display: none;
 }
 
-.card-title {
-    font-size: 1.2rem;
-    font-weight: 500;
-}
-
-.card-body {
-    background-color: #333;
-    border-radius: 0 0 10px 10px;
-    padding: 15px;
-}
-
-.card:hover {
-    transform: scale(1.05); /* Escala la tarjeta al 105% */
-    transition: transform 0.3s ease-in-out; /* Transición más suave al entrar */
-}
 
 /*---------------------------------------------------------------------------*/
 /*Footer*/
@@ -163,26 +145,17 @@ hr {
     text-decoration: underline;
 }
 
-
-/*----------------------------------------------------------------------*/
+/*-----------------------------------------------------------------------*/
 /*Media Querys*/
 
 @media (max-width: 992px) {
-    .card-artistas {
-        grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual ancho */
+    .card-descuentos {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 768px) {
-    .galeria-artistas h3 {
-        font-size: 1.5rem;
-    }
-
-    .card {
-        width: 90%;
-    }
-
-    .card-artistas {
-        grid-template-columns: 1fr; /* Una columna */
+    .card-descuentos {
+        grid-template-columns: 1fr;
     }
 }
