vinculados los scripts

--- a/tickets.css
+++ b/tickets.css
@@ -136,6 +136,10 @@ hr {
     display: none;
 }
 
+.btn{
+    width: 100%;
+}
+
 
 /*---------------------------------------------------------------------------*/
 /*Footer*/
